--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 rvm:
-- 2.2.2
+  - 2.2.2
 sudo: false
+
+script:
+ - bundle exec rake spec
 notifications:
   email: false
   slack:
