Stop travis-ci for now
Signed-off-by: Koichi Shiraishi <zcheeee@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,9 @@ machine:
   ruby:
     version: 2.2.2
 
-#dependencies:
-#  override:
-#    - docker run busybox echo hello world
+dependencies:
+  cache_directories:
+    - vendor/bundle
 
 test:
   override:
